--- a/Music/src/app/music/music.component.html
+++ b/Music/src/app/music/music.component.html
@@ -17,7 +17,35 @@
       <td>Baianá</td>
       <td>Barbatuques</td>
       <td>O seguinte é esse</td>
-      <td>Barbatuques</td>
+      <td>Maracatu</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Suburbia</td>
+      <td>Trombone Shorty</td>
+      <td>Hurricane</td>
+      <td>New Orelans Funky</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>O Guarani</td>
+      <td>OBMJ</td>
+      <td>Orquestra Brasileira de Música Jamaicana</td>
+      <td>Ska</td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td>Caravan</td>
+      <td>Dizzy Gillespie</td>
+      <td>Odyssey</td>
+      <td>Jazz</td>
+    </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td>Funk Brother Soul</td>
+      <td>Gerson King Combo</td>
+      <td>Volume II</td>
+      <td>Funk</td>
     </tr>
   </tbody>
 </table>
